--- a/HW1/App.xaml
+++ b/HW1/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="HW1.App"
+﻿<Application x:Class="HW2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:HW1"
+             xmlns:local="clr-namespace:CSharpHomework"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
