--- a/HW1/MainWindow.xaml
+++ b/HW1/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="HW1.MainWindow"
+﻿<Window x:Class="CSharpHomework.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
-        xmlns:authentication="clr-namespace:HW1.View"
+        xmlns:authentication="clr-namespace:CSharpHomework.View"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid IsEnabled="{Binding IsControlEnabled, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
