--- a/HW1/View/Date.xaml
+++ b/HW1/View/Date.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="HW1.View.Date"
+﻿<UserControl x:Class="CSharpHomework.View.Date"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:tools="clr-namespace:CSharpHomework.View.Tools"
         mc:Ignorable="d"
         >
     <Grid>
@@ -10,36 +11,51 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="40" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            
+
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Pick up your date of birth"/>
-        <DatePicker Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Center"  
-                  SelectedDate="{Binding Path=SelectedDate}"
+
+        <tools:LabelAndTextControl  Grid.Row="0" Grid.Column="0"
+                                       Grid.ColumnSpan="2" Margin="10"
+                                       Caption="Name"
+                                       Text ="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></tools:LabelAndTextControl>
+
+        <tools:LabelAndTextControl  Grid.Row="1" Grid.Column="0"
+                                    Grid.ColumnSpan="2" Margin="10"
+                                    Caption="Surname"
+                                    Text ="{Binding Surname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></tools:LabelAndTextControl>
+
+        <tools:LabelAndTextControl  Grid.Row="2" Grid.Column="0"
+                                    Grid.ColumnSpan="2" Margin="10"
+                                    Caption="Email"
+                                    Text ="{Binding Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></tools:LabelAndTextControl>
+
+
+        <Label  Name="LabelDatePicker" Grid.Row="3" Height="25" FontWeight="Bold" FontSize="10"  Margin="10,0,0,0"  
+               Content="Pick your birthday date"/>
+
+
+        <DatePicker Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Center"  
+                    SelectedDate="{Binding Path=SelectedDate}"
                     
-                   ></DatePicker>
-        
+                    Margin="10,2,0,10" 
+        ></DatePicker>
 
-        <Button Grid.Row="2" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Center" Content="Calculate" Command="{Binding CalculateCommand}"/>
 
-        <TextBlock Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" 
-                   
-                   Text="{Binding Age}"
-                   />
+        <Button Grid.Row="5" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10"
+                Content="Proceed" Command="{Binding CalculateCommand}"/>
 
-        <TextBlock Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Center"
-                   Text="{Binding ZodiakSign}"
+        <TextBox Grid.Row="6" Grid.Column="0"  HorizontalAlignment="Stretch" VerticalAlignment="Center" 
                    
-                   />
-        <TextBlock Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" 
-                   Text="{Binding ZodiakYear}"
-                   
-                   />
+            Text="{Binding PersonInfo}"></TextBox>
 
     </Grid>
 </UserControl>
