--- a/HW1/MainWindow.xaml
+++ b/HW1/MainWindow.xaml
@@ -6,9 +6,11 @@
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:authentication="clr-namespace:CSharpHomework.View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid IsEnabled="{Binding IsControlEnabled, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
-        <authentication:Date> </authentication:Date>
+        Title="MainWindow" Height="550" Width="800">
+    <!--<Grid IsEnabled="{Binding IsControlEnabled, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">-->
+    <Grid>
+
+        <ContentControl Name="_contentControl" Content="{Binding Content, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsControlEnabled, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></ContentControl>
 
         <fa:ImageAwesome Icon="Refresh" Width="50" Height="50" Spin="True" Visibility="{Binding LoaderVisibility, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></fa:ImageAwesome>
 
