add margin to checkbox

--- a/HW1/View/MainView.xaml
+++ b/HW1/View/MainView.xaml
@@ -51,7 +51,7 @@
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
 
-            <CheckBox Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" IsChecked="{Binding Path=IsChecked}"></CheckBox>
+            <CheckBox Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" IsChecked="{Binding Path=IsChecked}" Margin="10,0,0,0"></CheckBox>
             <DatePicker 
                 
                 Grid.Row="0" Grid.Column="1"  HorizontalAlignment="Stretch" VerticalAlignment="Center"  
